--- a/Day001_HW.ipynb
+++ b/Day001_HW.ipynb
@@ -58,31 +58,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 下載檔案到 Data 資料夾，存成檔名 Homework.txt\n",
     "\n",
     "try:\n",
-    "    os.makedirs( './Data', exist_ok=True )\n",
+    "    os.makedirs( './Data', exist_ok=True)\n",
     "    '''\n",
     "    Your Code\n",
     "    '''\n",
+    "    urlretrieve (\"https://www.w3.org/TR/PNG/iso_8859-1.txt\", \"./data/Homework.txt\")\n",
     "except:\n",
     "    print('發生錯誤！')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[X] 檢查 Data 資料夾是否有 Homework.txt 檔名之檔案\n"
+      "2.txt\n",
+      "example1.txt\n",
+      "example2.txt\n",
+      "Homework.txt\n",
+      "[O] 檢查 Data 資料夾是否有 Homework.txt 檔名之檔案\n"
      ]
     }
    ],
@@ -94,6 +99,9 @@
     "'''\n",
     "Your Code\n",
     "'''\n",
+    "files = os.listdir( './Data' )\n",
+    "for file in dirs:\n",
+    "    print(file)\n",
     "\n",
     "if 'Homework.txt' in files:\n",
     "    print('[O] 檢查 Data 資料夾是否有 Homework.txt 檔名之檔案')\n",
@@ -103,32 +111,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "# 將「Hello World」字串覆寫到 Homework.txt 檔案\n",
     "\n",
-    "f = ''\n",
+    "# f = ''\n",
     "\n",
     "with open(\"./Data/Homework.txt\", \"w\") as fh:\n",
     "    '''\n",
     "    Your Code\n",
     "    '''\n",
+    "    f = fh.write(\"Hello World\")\n",
+    "    print(f)\n",
     "\n",
-    "try:\n",
-    "    with open(\"./Data/Homework.txt\", \"r\") as fh:\n",
-    "        '''\n",
-    "        Your Code\n",
-    "        '''\n",
-    "except EnvironmentError: # parent of IOError, OSError *and* WindowsError where available\n",
-    "    pass    \n",
+    "#try:\n",
+    "#    with open(\"./Data/Homework.txt\", \"r\") as fh:\n",
+    "#        '''\n",
+    "#        Your Code\n",
+    "#        '''\n",
+    "#except EnvironmentError: # parent of IOError, OSError *and* WindowsError where available\n",
+    "#    pass    \n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -137,14 +155,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[X] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數\n"
+      "[O] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數\n"
      ]
     }
    ],
    "source": [
     "# 檢查 Homework.txt 檔案字數是否符合 Hello World 字數\n",
     "\n",
-    "if len('Hello World') == len(f):\n",
+    "if len('Hello World') == f:\n",
     "    print('[O] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數')\n",
     "else:\n",
     "    print('[X] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數')"
@@ -188,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
